examples/test/testpolicy12793.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12793
  namespace: namespace355
spec:
  podSelector:
    matchLabels:
      key1: value40
      key13: value26
      key27: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value13
      podSelector:
        matchLabels:
          key37: value31
